@startuml

class inheritance.BestValueMenu {
	{field} -out : java.io.PrintStream
	{method} #allergenNotification ( paramString1 : String , paramString2 : String ) : void
	{method} #dessert () : String
	{method} #mainCourse () : String
	{method} +serveMenu () : String
	{method} -starter () : String
}


class inheritance.GourmetsMenu {
	{method} #dessert () : String
}


class inheritance.MeatLoversMenu {
	{method} #mainCourse () : String
}




inheritance.GourmetsMenu --|>  inheritance.BestValueMenu
inheritance.MeatLoversMenu --|>  inheritance.BestValueMenu


@enduml